Fix: Prevent layout shifting by making scrollbar always visible

--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,3 @@
 #root {
   @apply font-Lato mt-12;
 }
-
-body {
-  @apply bg-custom_linen;
-}
